Fix: [v3] Fix for QA mention and verse (#155)
Fix: UI materials
* Change the front-weight of Subtitle2 from 600 to 500
* Modify mention badge position on the ChannelListItem component
* Change Info Icon size to 20px on the SuggestedMentionListItem component
Fix: Mention related stuff
* Modify the onMouseOver event on the SuggestedMentionList component
* Filter 'html' text when pasting text to the MessageInput component
* Hide and apply ellipsis for overflowing text on the SuggestedMentionListItem component
* Deactivate the MessageInput component when the current user is muted or the current channel is frozen
* Reset the mention states of the current channel when changing channel and closing the edit MessageInput component

--- a/src/smart-components/Channel/components/SuggestedMentionList/index.scss
+++ b/src/smart-components/Channel/components/SuggestedMentionList/index.scss
@@ -21,12 +21,6 @@
     @include themed() {
       background-color: t(bg-0);
     }
-    &:hover {
-      cursor: pointer;
-      @include themed() {
-        background-color: t(bg-1);
-      }
-    }
     &.focused {
       @include themed() {
         background-color: t(bg-1);
@@ -41,11 +35,19 @@
       position: relative;
       display: inline-block;
       margin-left: 16px;
+      max-width: calc(100% - 250px);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .sendbird-mention-suggest-list__user-item__user-id {
       position: absolute;
       display: inline-block;
       right: 16px;
+      max-width: 180px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 
