--- a/src/ui/Label/index.scss
+++ b/src/ui/Label/index.scss
@@ -33,7 +33,7 @@
 
 .sendbird-label--subtitle-2 {
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 500;
   font-stretch: normal;
   font-style: normal;
   line-height: 1.14;
